libavc1394 ChangeLog

0.5.3 release

2006-04-08 Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c: patch from Pieter Palmers to bugfix bad response
	  address from being returned from avc1394_transaction() and 
	  avc1394_transaction_block() in the case of an unresolved interim
	  response.
	* avc1394.h, avc1394_simple.c: added avc1394_transaction_block2() in
	  order to return the length of the response without breaking
	  interface backwards compatibility.
	* test/motdctcmd.c: added utility to send control commands to a Motorola
	  DCT series settop box.

0.5.2 unreleased

2006-03-22 Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c: patch from Pieter Palmers to fix intermittent
	  failures to see the FCP response.

2005-07-02 Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394_internal.[hc], libavc1394/avc1394_simple.c,
	  libavc1394/avc1349_vcr.c, test/dvcont.c: remove global variables used
	  for FCP/AVC transactions, which helps prevent the host order byte swapped
	  data from being overwritten; adjust the locations of start/stop FCP in
	  in order to minimize chance of overlapping responses.
	* libavc1394/avc1394.h: added avc1394_transaction_close() due to removal
	  of globals for FCP response.
	* libavc1394/avc1394_vcr.c: return error when timecode is all 0xffffffff.

0.5.1 release

2005-06-13 Dan Dennedy <dan@dennedy.org>
	* libavc1394/avc1394_simple.c: bugfix avc1394_send_command_block not
	  idempotent.
	* libavc1394/avc1394_simple.[hc]: added decode_ctype and additional debug.
	* various: indentation cleanup.

2005-05-24 Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c, avc1394_internal.c: apply patch from Pieter Palmers to 
	fix incorrect fcp response length handling and subsequent endian conversion.

0.5.0 release

2005-02-17  Dan Dennedy <dan@dennedy.org>
	* added spec and pkg-config support files
	* added tests/mkrfc2734.1 man page
	* fix compilation warnings and installation of pc file 

2005-01-25  Dan Dennedy <dan@dennedy.org>