@@ -367,6 +367,65 @@
 #define AVC1394_TUNER_COMMAND_CA_ENABLE 0xCC
 #define AVC1394_TUNER_COMMAND_AVC1394_TUNER_STATUS 0xCD
 
+/* Panel subunit indirect mode commands and operands */
+#define AVC1394_PANEL_COMMAND_PASS_THROUGH 0x000007C00
+#define AVC1394_PANEL_CMD_PASS_THROUGH 0x7C
+#define AVC1394_PANEL_OPERAND_PRESS 0x00
+#define AVC1394_PANEL_OPERAND_RELEASE 0x80
+
+#define AVC1394_PANEL_OPERATION_SELECT 0x00
+#define AVC1394_PANEL_OPERATION_UP 0x01
+#define AVC1394_PANEL_OPERATION_DOWN 0x02
+#define AVC1394_PANEL_OPERATION_LEFT 0x03
+#define AVC1394_PANEL_OPERATION_RIGHT 0x04
+#define AVC1394_PANEL_OPERATION_RIGHT_UP 0x05
+#define AVC1394_PANEL_OPERATION_RIGHT_DOWN 0x06
+#define AVC1394_PANEL_OPERATION_LEFT_UP 0x07
+#define AVC1394_PANEL_OPERATION_LEFT_DOWN 0x08
+#define AVC1394_PANEL_OPERATION_ROOT_MENU 0x09
+#define AVC1394_PANEL_OPERATION_SETUP_MENU 0x0A
+#define AVC1394_PANEL_OPERATION_CONTENTS_MENU 0x0B
+#define AVC1394_PANEL_OPERATION_FAVORITE_MENU 0x0C
+#define AVC1394_PANEL_OPERATION_EXIT 0x0D
+#define AVC1394_PANEL_OPERATION_0 0x20
+#define AVC1394_PANEL_OPERATION_1 0x21
+#define AVC1394_PANEL_OPERATION_2 0x22
+#define AVC1394_PANEL_OPERATION_3 0x23
+#define AVC1394_PANEL_OPERATION_4 0x24
+#define AVC1394_PANEL_OPERATION_5 0x25
+#define AVC1394_PANEL_OPERATION_6 0x26
+#define AVC1394_PANEL_OPERATION_7 0x27
+#define AVC1394_PANEL_OPERATION_8 0x28
+#define AVC1394_PANEL_OPERATION_9 0x29
+#define AVC1394_PANEL_OPERATION_DOT 0x2A
+#define AVC1394_PANEL_OPERATION_ENTER 0x2B
+#define AVC1394_PANEL_OPERATION_CLEAR 0x2C
+#define AVC1394_PANEL_OPERATION_CHANNEL_UP 0x30
+#define AVC1394_PANEL_OPERATION_CHANNEL_DOWN 0x31
+#define AVC1394_PANEL_OPERATION_PREVIOUS_CHANNEL 0x32
+#define AVC1394_PANEL_OPERATION_SOUND_SELECT 0x33
+#define AVC1394_PANEL_OPERATION_INPUT_SELECT 0x34
+#define AVC1394_PANEL_OPERATION_DISPLAY_INFO 0x35
+#define AVC1394_PANEL_OPERATION_HELP 0x36
+#define AVC1394_PANEL_OPERATION_PAGE_UP 0x37
+#define AVC1394_PANEL_OPERATION_PAGE_DOWN 0x38
+#define AVC1394_PANEL_OPERATION_POWER 0x40
+#define AVC1394_PANEL_OPERATION_VOLUME_UP 0x41
+#define AVC1394_PANEL_OPERATION_VOLUME_DOWN 0x42
+#define AVC1394_PANEL_OPERATION_MUTE 0x43
+#define AVC1394_PANEL_OPERATION_PLAY 0x44
+#define AVC1394_PANEL_OPERATION_STOP 0x45
+#define AVC1394_PANEL_OPERATION_PAUSE 0x46
+#define AVC1394_PANEL_OPERATION_RECORD 0x47
+#define AVC1394_PANEL_OPERATION_REWIND 0x48
+#define AVC1394_PANEL_OPERATION_FASTFORWARD 0x49
+#define AVC1394_PANEL_OPERATION_EJECT 0x4A
+#define AVC1394_PANEL_OPERATION_FORWARD 0x4B
+#define AVC1394_PANEL_OPERATION_BACKWARD 0x49
+#define AVC1394_PANEL_OPERATION_ANGLE 0x50
+#define AVC1394_PANEL_OPERATION_SUBPICTURE 0x51
+
+
 enum avc1394_measurement_unit {
     AVC1394_VCR_MEASUREMENT_VIDEO_FRAME = 0,
     AVC1394_VCR_MEASUREMENT_VIDEO_SCENE,
