@@ -1,16 +1,17 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
-.TH MOTDCTCMD "1" "April 2006" "motdctcmd (libavc1394) 0.1" "User Commands"
+.TH PANELCTL "1" "April 2006" "panelctl (libavc1394) 0.1" "User Commands"
 .SH NAME
-motdctcmd \- manual page for motdctcmd (libavc1394) 0.1
+panelctl \- manual page for panelctl (libavc1394) 0.1
 .SH SYNOPSIS
-.B motdctcmd
+.B panelctl
 [\fIOPTION\fR] \fI<channel|command>\fR
 .SH DESCRIPTION
 
-.B motdctcmd
+.B panelctl
 is a command line tool to send control commands via an IEEE1394
-link to a  Motorola Digital Consumer Terminal (DCT). Or for the non-techies: 
-.B motdctcmd
+link to an AV/C Panel such as the Motorola Digital Consumer Terminal (DCT) 
+series. Or for the non-techies: 
+.B panelctl
 lets you remote control your digital cable box via a Firewire cable.
 .SH OPTIONS
 .TP
